[gd_scene load_steps=13 format=3 uid="uid://dtyt5n78wilas"]

[ext_resource type="Script" uid="uid://pbk8aun47h5" path="res://UI/Shop/ShopScreen.gd" id="1_n1db0"]
[ext_resource type="Shader" uid="uid://drcqqishffaf4" path="res://World/Assets/main.gdshader" id="2_8jwsa"]
[ext_resource type="PackedScene" uid="uid://rvrodyo67gq3" path="res://World/Components/free_zone.tscn" id="3_fj268"]
[ext_resource type="PackedScene" uid="uid://bgvxjymnwpuqu" path="res://UI/Shop/ShopItem.tscn" id="4_8jwsa"]
[ext_resource type="Script" uid="uid://ce6ocn8vf4b1w" path="res://UI/Components/CountingLabel.gd" id="4_r3ry5"]
[ext_resource type="Texture2D" uid="uid://dlw21o2dcgf64" path="res://UI/Assets/icons8_comet_120px.png" id="5_b5qcv"]
[ext_resource type="PackedScene" uid="uid://byx41vvlsyjns" path="res://UI/Shop/UpgradeItem.tscn" id="7_fj268"]
[ext_resource type="Texture2D" uid="uid://crvd6jl7ykeyr" path="res://UI/Assets/button.webp" id="8_r3ry5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8lfut"]
shader = ExtResource("2_8jwsa")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/background_color = Color(0, 0, 0, 1)
shader_parameter/speed = 0.2
shader_parameter/density = 145.0
shader_parameter/compression = 0.5
shader_parameter/trail_size = 100.0
shader_parameter/brightness = 0.3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8jwsa"]
content_margin_top = 40.0
content_margin_bottom = 60.0
bg_color = Color(0.2, 0.2, 0.2, 0.215686)
border_width_left = 5
border_width_top = 5
border_color = Color(0.11, 0.11, 0.11, 1)
corner_radius_top_left = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ywx2w"]
content_margin_right = 10.0
bg_color = Color(1, 0.756863, 0.027451, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.960784, 0.592157, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 30.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n1db0"]

[node name="ShopScreen" type="CanvasLayer"]
script = ExtResource("1_n1db0")

[node name="HealthBarContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 80)
layout_direction = 2
anchors_preset = 10
anchor_right = 1.0
offset_left = 15.0
offset_top = 25.0
offset_right = -10.0
offset_bottom = 105.0
grow_horizontal = 2

[node name="background" type="ColorRect" parent="."]
z_index = -1
material = SubResource("ShaderMaterial_8lfut")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="BulletsContainer" type="Node" parent="."]

[node name="ShipContainer" type="Node" parent="."]

[node name="FreeZone" parent="." instance=ExtResource("3_fj268")]
position = Vector2(0, -130)
rotation = -3.14159

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_direction = 2
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -458.0
offset_top = 708.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8jwsa")
horizontal_scroll_mode = 0

[node name="ShopItemContainer" type="HFlowContainer" parent="ScrollContainer"]
layout_direction = 2
layout_mode = 2
theme_override_constants/h_separation = -135
theme_override_constants/v_separation = 70

[node name="ShopItem" parent="ScrollContainer/ShopItemContainer" instance=ExtResource("4_8jwsa")]
layout_mode = 2

[node name="ShopItem2" parent="ScrollContainer/ShopItemContainer" instance=ExtResource("4_8jwsa")]
layout_mode = 2

[node name="ShopItem3" parent="ScrollContainer/ShopItemContainer" instance=ExtResource("4_8jwsa")]
layout_mode = 2

[node name="ShopItem4" parent="ScrollContainer/ShopItemContainer" instance=ExtResource("4_8jwsa")]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="."]
custom_minimum_size = Vector2(0, 80)
layout_direction = 2
offset_left = 860.0
offset_top = 20.0
offset_right = 1060.0
offset_bottom = 102.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 0.960784, 0.592157, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_ywx2w")
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
script = ExtResource("4_r3ry5")

[node name="TextureRect" type="TextureRect" parent="ScoreLabel"]
layout_mode = 0
offset_left = -83.0
offset_top = -23.0
offset_right = 37.0
offset_bottom = 97.0
texture = ExtResource("5_b5qcv")

[node name="Panel" type="Panel" parent="."]
layout_direction = 2
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -239.0
offset_top = -583.0
offset_right = -203.0
offset_bottom = -547.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_n1db0")

[node name="Marker2D" type="Marker2D" parent="Panel"]

[node name="UpgradeItemContainer" type="HFlowContainer" parent="."]
layout_direction = 2
anchors_preset = 10
anchor_right = 1.0
offset_left = 40.0
offset_top = 193.0
offset_right = -40.0
offset_bottom = 343.0
grow_horizontal = 2
theme_override_constants/h_separation = 70
alignment = 1

[node name="UpgradeItem" parent="UpgradeItemContainer" instance=ExtResource("7_fj268")]
layout_mode = 2

[node name="UpgradeItem2" parent="UpgradeItemContainer" instance=ExtResource("7_fj268")]
layout_mode = 2

[node name="UpgradeItem3" parent="UpgradeItemContainer" instance=ExtResource("7_fj268")]
layout_mode = 2

[node name="UpgradeItem6" parent="UpgradeItemContainer" instance=ExtResource("7_fj268")]
layout_mode = 2

[node name="Back_Button" type="Button" parent="."]
layout_direction = 2
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 93.0
offset_top = -360.0
offset_right = -549.0
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_colors/font_hover_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_colors/font_outline_color = Color(1, 0.960784, 0.592157, 1)
theme_override_colors/font_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_colors/font_focus_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_colors/font_pressed_color = Color(0.345098, 0.207843, 0.129412, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 84
text = "Back"
icon = ExtResource("8_r3ry5")
flat = true
icon_alignment = 1

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="pressed" from="Back_Button" to="." method="_on_back_button_pressed"]
